Fixed spacing

--- a/src/Components/Support/Support.css
+++ b/src/Components/Support/Support.css
@@ -2,7 +2,7 @@
   padding: 55px;
 
   /* border: 1px solid purple; */
-  margin: 50px 0;
+  margin: 50px 5rem;
 }
 .support-container h2 {
   color: var(--color-primary);
